--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
         Frontend Mentor </a>. Coded by
-      <a href="https://www.frontendmentor.io/profile/KirstChat">Kirsty Chatterton</a>.
+      <a href="https://www.frontendmentor.io/profile/KirstChat" target="_blank">Kirsty Chatterton</a>.
     </p>
   </footer>
 </body>
